# kotlin-bazel-example

./: .bazelproject  .bazelrc  .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yml
src/: BUILD.bazel
src/main/java/org/example/: Main.java
src/main/kotlin/org/example/: FileUtil.kt
