# Copyright (c) 2025, Martin Urban
# Licensed under the BSD 3-Clause License (https://opensource.org/license/bsd-3-clause)
# This file may not be copied, modified, or distributed except according to those terms.
# ======================================================================================
load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_kotlinc_options")

package(default_visibility = ["//visibility:public"])

kt_kotlinc_options(
    name = "kotlinc_options",
    include_stdlibs = "none",
    jvm_target = "17",
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "2.0",
    experimental_multiplex_workers = False,
    jvm_target = "17",
    kotlinc_options = ":kotlinc_options",
    language_version = "2.0",
)
