# Copyright (c) 2025, Martin Urban
# Licensed under the BSD 3-Clause License (https://opensource.org/license/bsd-3-clause)
# This file may not be copied, modified, or distributed except according to those terms.
# ======================================================================================
module(
    name = "kotlin-bazel-example",
    version = "0.1.0",
)

bazel_dep(name = "rules_kotlin", version = "2.1.8")

register_toolchains(
    "//:kotlin_toolchain",
)

# Required by rules_jvm_external since version 6.3
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_java", version = "8.13.0")
bazel_dep(name = "rules_jvm_external", version = "6.8")

# Set up Maven repositories for dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "junit:junit:4.13.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
